<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/nav_group_actions">
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_timeline"
            android:title="@string/menu_timeline" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/cart_title" />
        <item
            android:id="@+id/nav_quick_conversions"
            android:icon="@drawable/ic_table"
            android:title="@string/menu_quick_conversions" />
        <item
            android:id="@+id/nav_date_picker"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_historical_rates" />
        <item
            android:id="@+id/nav_refresh"
            android:icon="@drawable/ic_refresh"
            android:title="@string/menu_refresh" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share" />
    </group>
    <group android:id="@+id/nav_group_settings">
        <item
            android:id="@+id/nav_change_api"
            android:icon="@drawable/ic_data_provider"
            android:title="@string/api_title" />
        <item
            android:id="@+id/nav_fees"
            android:icon="@drawable/ic_fee"
            android:title="@string/fee_manager_title" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>
